# runtimes-games-webapp

./: .gitignore  main.py  mcp_server.py  pyproject.toml
backend/: announcements.json  cache.py  database.py  events.json  main.py
backend/models/: enums.py  match.py  player.py  subteam.py  team.py
backend/routes/: announcements.py  auth.py  dashboard.py  events.py  matches.py  players.py  points_table.py  subteams.py  teams.py
backend/services/: points_table.py
backend/utils/: cache.py
docs/: 01-project-overview.md  02-fastapi-backend.md  03-mongodb-integration.md  04-team-crud.md  05-match-crud.md  06-points-table.md
fl_mcp/: README.md  __init__.py  config.py  server.py
fl_mcp/prompts/: __init__.py
fl_mcp/resources/: __init__.py
fl_mcp/tools/: __init__.py  matches.py  players.py  points_table.py  subteams.py  teams.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AdminLogin.jsx
frontend/src/components/common/: AnnouncementTicker.css  AnnouncementTicker.jsx  EmptyState.jsx  LoadingState.jsx
frontend/src/components/forms/: AnnouncementManager.jsx  MatchForm.jsx  MatchRescheduleForm.jsx  MatchUpdateForm.jsx  ResolveMatchForm.jsx  SquadForm.jsx  TeamForm.jsx
frontend/src/components/layout/: AppHeader.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  Matches.jsx  PointTable.jsx  Squad.jsx  Teams.jsx
frontend/src/services/: api.js
