[project]
name = "foosball-league"
version = "0.1.0"
description = "Foosball League backend, frontend, and MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.5.20",
    "fastapi>=0.136.3",
    "fastmcp>=2.10.6",
    "httpx>=0.28.1",
    "motor>=3.3.2",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "upstash-redis>=1.7.0",
    "uvicorn>=0.34.0",
]
